# Zcage

./: README.md
Zcage_Blockchain/libblockchain/: BlockChainInterface.h
Zcage_Blockchain/libconfig/: GlobalConfigure.h
Zcage_Blockchain/libconsensus/: Common.h  ConsensusEngineBase.cpp  ConsensusEngineBase.h  ConsensusInterface.h  Sealer.cpp  Sealer.h  TxGenerator.h
Zcage_Blockchain/libdevcore/: BasicLevelDB.cpp  BasicLevelDB.h  Log.cpp  Log.h  SnappyCompress.cpp  SnappyCompress.h  TopicInfo.h  TreeTopology.cpp  TreeTopology.h  secure_vector.h
Zcage_Blockchain/libethcore/: BlockFactory.h  EVMFlags.cpp  EVMFlags.h  PartiallyBlock.cpp  PartiallyBlock.h
Zcage_Blockchain/libflowlimit/: RPCQPSLimiter.cpp  RPCQPSLimiter.h  RateLimiter.cpp  RateLimiter.h
Zcage_Blockchain/libinitializer/: BoostLogInitializer.cpp  BoostLogInitializer.h  GlobalConfigureInitializer.cpp  GlobalConfigureInitializer.h  InitializerInterface.h
Zcage_Blockchain/libinterpreter/: VMSchedule.h
Zcage_Blockchain/libledger/: DBInitializer.cpp  DBInitializer.h  Ledger.cpp  Ledger.h  LedgerInterface.h  LedgerManager.h  LedgerParam.cpp  LedgerParam.h  LedgerParamInterface.h
Zcage_Blockchain/libnetwork/: ASIOInterface.cpp  ASIOInterface.h  Host.cpp  Host.h  Socket.h  SocketFace.h
Zcage_Blockchain/libprecompiled/: CMakeLists.txt  PrecompiledGas.cpp  PrecompiledGas.h  PrecompiledResult.h  WorkingSealerManagerPrecompiled.cpp  WorkingSealerManagerPrecompiled.h
Zcage_Blockchain/libprecompiled/extension/: HelloWorldPrecompiled.cpp
Zcage_plonk/: CMakeLists.txt  circom.h  function.h  para.h  prove.cpp  sm2_create_key_pair.c  sm2_sign_and_verify.c  sm3_with_preprocess.c  threadpool.h  verify.cpp
Zcage_plonk/include/: sm2_cipher_error_codes.h  sm2_create_key_pair.h  sm2_sign_and_verify.h  sm3_with_preprocess.h
Zcage_web/: .user.ini  about.html  bank.php  company.php  contact.html  index.html  power_grid.php  project.html  proof.php  services.html  tax.php  verify.php
(+104 files in other folders)
