
file(GLOB_RECURSE SRC_LIST "*.cpp")
file(GLOB_RECURSE HEADERS "*.h")
add_library(precompiled ${SRC_LIST} ${HEADERS})
find_library(NTL_LIB ntl)
find_library(JSON_LIB jsoncpp)
find_library(MCL_LIB mcl HINTS ${PROJECT_SOURCE_DIR}/deps/lib)
target_link_libraries(precompiled PUBLIC ${NTL_LIB} m)
target_link_libraries(precompiled PUBLIC ${MCL_LIB})
target_link_libraries(precompiled PUBLIC ${JSON_LIB})
target_link_libraries(precompiled PUBLIC storage devcore JsonCpp)
target_link_libraries(precompiled PUBLIC JsonCpp)
target_link_libraries(precompiled PRIVATE Paillier GroupSig VRF)
add_subdirectory(extension)
